# headlights-oss

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml
chain/: README.md  pyproject.toml
chain/headlights_chain/: __init__.py  anchor.py  canonical.py  chain.py  enums.py  records.py  signatures.py
chain/tests/: test_anchor.py  test_canonical.py  test_chain.py  test_records.py  test_signatures.py
dashboard-reference/: README.md
examples/: README.md  loan_analyser_demo.py
marketing/: README.md  __init__.py  discovery.py  drafter.py  filters.py  github.py  templates.py  upload.py
marketing/tests/: conftest.py  test_discovery.py  test_drafter.py  test_filters.py  test_github.py  test_templates.py  test_upload.py
scorecard/: index.html
sdk-python/: README.md  pyproject.toml
sdk-python/headlights_sdk/: __init__.py  client.py  hashing.py  hosted.py
sdk-python/headlights_sdk/guards/: README.md  __init__.py  authority.py  base.py  citation.py  conduct.py  constraint.py  egress.py  metric.py  persona.py  verification.py
sdk-python/tests/: test_client.py  test_guards.py  test_guards_modules.py  test_hashing.py  test_hosted.py
server/: README.md  pyproject.toml
server/headlights_server/: __init__.py  app.py  auth.py  chains.py  cli.py  config.py  deps.py  models.py  storage.py
server/headlights_server/routes/: agents.py  conduct.py  trace.py
server/tests/: conftest.py  test_api.py  test_trace.py
specs/: README.md  chain.md  decisions.md  scorecard-research.md  scorecard-rubric.md
verifier/: README.md  pyproject.toml
verifier/headlights_verify/: __init__.py  __main__.py  cli.py  verify.py
verifier/tests/: test_cli.py
