[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "headlights-sdk"
version = "0.1.0a1"
description = "Headlights Python SDK — record AI agent conduct as an AAT-aligned tamper-evident chain."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Stellae Consulting Pty Ltd", email = "hello@useheadlights.com" }]
keywords = ["audit", "agent", "ai", "sdk", "aat", "ietf", "decorator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "headlights-chain>=0.1.0a1,<0.2",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://useheadlights.com"
Repository = "https://github.com/headlights-oss"
Specification = "https://datatracker.ietf.org/doc/draft-sharif-agent-audit-trail/"

[tool.setuptools.packages.find]
include = ["headlights_sdk*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
