[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "headlights-verify"
version = "0.1.0a1"
description = "Public verifier for Headlights AI agent conduct chains (AAT-aligned)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Stellae Consulting Pty Ltd", email = "hello@useheadlights.com" }]
keywords = ["audit", "agent", "ai", "verifier", "aat", "ietf", "tamper-evident"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Logging",
]

dependencies = [
    "headlights-chain>=0.1.0a1,<0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
headlights-verify = "headlights_verify.cli:main"

[project.urls]
Homepage = "https://useheadlights.com"
Repository = "https://github.com/headlights-oss"
Specification = "https://datatracker.ietf.org/doc/draft-sharif-agent-audit-trail/"

[tool.setuptools.packages.find]
include = ["headlights_verify*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
